# open_tick

./: .gitignore  Cargo.toml
.github/workflows/: ci.yaml
src/: lib.rs  mountain_project.rs  thecrag.rs
tests/: mountainproject.rs  thecrag.rs
