[package]
name = "open_tick"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
serde = { version = "1.0.182", features = ["derive"] }
url = { version = "2.4.0", features = ["serde"] }

[dev-dependencies]
csv = "1.2.2"
pretty_assertions = "1.4.0"
